 /* $Id: ChangeLog,v 1.954 2000-05-20 14:56:15 sandervl Exp $ */

 2000-05-20: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   BroadcastMessageA/W bugfix
                Set visible state for both client & frame windows (fixes
                redrawing of toolbar window in mIRC32) in SetWindowPos &
                ShowWindow
    - KERNEL32: Partly implemented GetDiskFreeSpaceExA/W; need to add support  
                for 64 bits values!

 2000-05-19: Jeroen van den Horn <J.vandenHorn@fibre.a2000.nl>
    - ICMP: Initial release of ICMP.DLL and header files
    - OPENGL32: Upgraded to latest level (3.3)

 2000-05-19: Yuri Dario <mc6530@mclink.it>
    - USER32:   Don't send WM_PARENTNOTIFY if parent has already been destroyed

 2000-05-19: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
    - WNASPI32: Unique id & buffer length bugfixes -> CDRWIN 3.8a
                works now (recording on SCSI only for now)

 2000-05-19: Sander van Leeuwen <sandervl@xs4all.nl>
    - SHELL32:  Fixed some exports
    - SHLWAPI:  Fixed ordinals of exports (based on NT4 SP6) + added stubs
    - GDI32:    Fixed palette copy in SetDIBits (dib sections) -> fixes
                bitmap colors in WinDVD control window & X-Wing vs. Tie-Fighter
                install window

 2000-05-18: Michal Necasek <mike@mendelu.cz>
    - DSOUND:   An updated version, hopefully not too many bugs were introduced

 2000-05-18: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: EnumResourceNamesA bugfix (wrong length in UnicodeToAsciiN call)
                (reported by Michal Necasek)
                Call CheckLogException for each exception; safety guard against
                exceptions inside WriteLog.
    - WSOCK32:  Mark cancelled async select to avoid finding it before the
                thread removes itself from the queue
                Check if async select thread is blocking inside select before
                calling so_cancel to cancel or change the async select.